# Automata

./: .gitignore  COPYING  README.md  com.tenderowl.automata.yaml  meson.build  modules.yaml  python3-modules.yaml  requirements.txt
automata/: main.py  window.py
automata/core/: database.py  db_worker.py  models.py  parser.py  task_loader.py
automata/db/: client.py  repo.py
automata/models/: __init__.py  event.py  note.py  project.py  schema.py  tag.py  task.py
automata/services/: __init__.py  budget_service.py  goal_service.py  note_service.py  okr_service.py  person_service.py  portfolio_service.py  project_service.py  task_service.d.py  task_service.py
automata/widgets/: dashboard.py  goals_page.py  inbox.py  persons_page.py  projects_page.py  quick_capture.py  setup_wizard.py  sidebar.py  task_list_row.py
automata/widgets/setup_wizard/: __init__.py  page1.py  page2.py  page3.py  page4.py  page5.py  page_add_owner.py  page_finish.py  page_import_contacts.py  page_import_context.py  page_set_goals.py  setup_wizard.py
data/: automata.css  automata.gresource.xml  com.tenderowl.automata.desktop.in  com.tenderowl.automata.gschema.xml  com.tenderowl.automata.metainfo.xml.in  com.tenderowl.automata.service.in  meson.build
data/icons/: meson.build
data/ui/: dashboard.blp  goals_page.blp  inbox.blp  persons-page.blp  projects_page.blp  setup-wizard.blp  sidebar.blp  task_list_row.blp  window.blp
data/ui/setup-wizard/: page-1.blp  page-2.blp  page-3.blp  page-4.blp  page-5.blp  page-add-owner.blp  page-finish.blp  page-import-contacts.blp  page-import-context.blp  page-set-goals.blp  setup-wizard.blp
docs/: data-model.md  workflow.md
po/: POTFILES.in  meson.build
subprojects/: blueprint-compiler.wrap
