application_id = 'com.tenderowl.automata'

dir_48 = 'hicolor' / '48x48' / 'apps'
install_data(
    dir_48 / ('@0@.png').format(application_id),
    install_dir: get_option('datadir') / 'icons' / dir_48,
)

dir_256 = 'hicolor' / '256x256' / 'apps'
install_data(
    dir_256 / ('@0@.png').format(application_id),
    install_dir: get_option('datadir') / 'icons' / dir_256,
)

dir_256 = 'hicolor' / '256x256' / 'actions'
install_data(
    dir_256 / 'finish.png',
    install_dir: get_option('datadir') / 'icons' / dir_256,
)
